Menu alki + male AI dla przeciwnika
Zmiany w  pakiet_arena. W nocnezoo2 zribione testy małej sztucznej inteligencj Plik q_table.ser to plik związany z nauką tego modelu AI